2004-07-12  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-RC2-cvs-b11

	* Fix: hidden albums are now indicated as such in fetch-album-images (GR protocol)

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b10

        * Change: Hidden images/albums could be *too* hidden (owner couldn't see them)

        * Change: slideshow validation URL is based on whether you're looking at an
          album, or the gallery-wide show.

        * Typo: Another photoAlbumUrl -> photoAlbumURL
          (so much for variables being case insensitive)

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b9

        * Typo: photoAlbumURL not photoAlbumUrl

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b8

        * Change: $adminCommands links now use CSS to prevent breaks in
          two-word links. (e.g. "[manage users]")

        * Change: Change 'one' to '1' to maintain consistancy

        * Change: Clear up to possible PHP notices for use_exif being
          unset.

	* Change: Add find_orphans to include list (from Tim)

	* Change: Correct config wizard link (from Tim)

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b7

        * Change: Check the UserDB for consistancy before logging into
          the config wizard.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b6

        * Change: Incorrect variable assignment in view_album optimization
          could yield hidden photos viewable

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b5

        * Change: Center the block-random image, to match the text

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b4

        * Change: Update security message to mention secure.sh, and only
          appear on non-Windows OSes.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b3

        * Change: Logout with relative URLs would return a redirect error