@@ -1,3 +1,12 @@
+2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b12
+
+        * Change: Add a 'rssMaxAlbums' option to the RSS page in the config wizard,
+          specifying the maximum number of changed albums to be returned in
+          the feed.  Defaults to 25.
+
+        * Change: Try and optimize the number of times we use isHiddenRecurse and
+          canReadRecurse when populating the RSS data
+
 2004-07-12  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-RC2-cvs-b11
 
 	* Fix: hidden albums are now indicated as such in fetch-album-images (GR protocol)
